# ic

backend/: fb.txt  fp.txt  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: drawer.tsx
frontend/src/components/card/: itemTable.tsx
frontend/src/components/main/: filter.tsx  search.tsx  table.tsx
frontend/src/data/: context.ts  schemas.ts
frontend/src/pages/: card.tsx  main.tsx
